# Junder

./: .clang-format  .editorconfig  .gitignore  .gitmodules  2023-2024-1.v5code  CMakeLists.txt  README.md  j1.txt  j2.txt  makefile
.github/workflows/: c-cpp.yml
core/: .gitrepo  CMakeLists.txt
core/include/: robot_specs.h
core/include/core/: robot_specs.h  vex.h
core/include/core/subsystems/: custom_encoder.h  flywheel.h  lift.h  mecanum_drive.h  screen.h  tank_drive.h
core/include/core/subsystems/fun/: pl_mpeg.h  video.h
core/include/core/subsystems/odometry/: odometry_3wheel.h  odometry_base.h  odometry_tank.h
core/include/core/utils/: auto_chooser.h  generic_auto.h  graph_drawer.h  logger.h  math_util.h  pure_pursuit.h  serializer.h  vector2d.h
core/include/core/utils/command_structure/: auto_command.h  basic_command.h  command_controller.h  condition.h  delay_command.h  drive_commands.h  flywheel_commands.h
core/include/core/utils/controls/: bang_bang.h  feedforward.h  motion_controller.h  pid.h  pidff.h  take_back_half.h
core/include/subsystems/: flywheel.h  imu.h  screen.h  tank_drive.h
core/include/subsystems/fun/: pl_mpeg.h  video.h
core/include/subsystems/odometry/: npod.h  odometry_base.h  odometry_fusion.h  odometry_gps.h
core/include/utils/: auto_chooser.h  bang_bang.h  feedback_base.h  geometry.h  math_util.h  moving_average.h  pid.h  pure_pursuit.h  state_machine.h  vector2d.h
core/include/utils/command_structure/: auto_command.h  basic_command.h  command_controller.h  condition.h  delay_command.h  drive_commands.h  flywheel_commands.h
core/include/utils/controls/: bang_bang.h  feedback_base.h  pidff.h  take_back_half.h
core/src/subsystems/: custom_encoder.cpp  flywheel.cpp  imu.cpp  mecanum_drive.cpp  screen.cpp  tank_drive.cpp
core/src/subsystems/fun/: video.cpp
core/src/subsystems/odometry/: npod.cpp  odometry_3wheel.cpp  odometry_base.cpp  odometry_fusion.cpp  odometry_gps.cpp  odometry_tank.cpp
core/src/utils/: auto_chooser.cpp  generic_auto.cpp  geometry.cpp  graph_drawer.cpp  logger.cpp  math_util.cpp  moving_average.cpp  pid.cpp  pure_pursuit.cpp  serializer.cpp  trapezoid_profile.cpp  vector2d.cpp
core/src/utils/command_structure/: auto_command.cpp  basic_command.cpp  command_controller.cpp  condition.cpp  drive_commands.cpp  flywheel_commands.cpp
core/src/utils/controls/: bang_bang.cpp  feedforward.cpp  motion_controller.cpp  pid.cpp  pidff.cpp  take_back_half.cpp
include/: automation.h  cata_system.h  core.h  robot-config.h  vex.h  vision.h
include/cata/: cata.h  common.h  intake.h
include/competition/: autonomous.h  opcontrol.h
src/: automation.cpp  cata_system.cpp  main.cpp  robot-config.cpp  vision.cpp
src/cata/: cata.cpp  intake.cpp
src/competition/: autonomous.cpp  opcontrol.cpp
vex/: mkenv.mk  mkrules.mk
